# simple_kv

./: .gitignore  .pre-commit-config.yaml  CNAME  Cargo.toml  README.md  abi.proto  build.rs  crates.js  help.html  search-index.js  settings.html  source-files.js
.github/ISSUE_TEMPLATE/: bug-report.yaml  bug_report.md  feature-request.yaml  (+1 more)
benches/: pubsub.rs
examples/: client.rs  client_with_frame.rs  dummy_server.rs  gen_cert.rs  gen_config.rs  server.rs  server_with_sled.rs
kvc/: all.html  fn.main.html  fn.start_publishing.html  fn.start_unsubscribe.html  index.html  sidebar-items.js  static.CALLSITE.html  static.META.html
kvc_cli/: all.html  fn.hdel.html  fn.hexist.html  fn.hget.html  fn.hgetall.html  fn.hmdel.html  fn.hmexist.html  fn.hmget.html  fn.hmset.html  fn.hset.html  fn.main.html  fn.psubscribe.html  fn.publish.html  fn.rustc_complains_if_this_name_conflicts_with_the_environment_even_though_its_probably_fine.html  fn.subscribe.html  index.html  opaque..html  sidebar-items.js  static.CALLSITE.html  static.META.html
kvs/: all.html  fn.main.html  index.html  sidebar-items.js  static.CALLSITE.html  static.META.html
simple_kv/: all.html  constant.GZIP.html  constant.LZ4.html  constant.ZSTD.html  enum.KvError.html  enum.LevelConfig.html  enum.RotationConfig.html  enum.StorageConfig.html  fn.compress.html  fn.decompress.html  fn.dispatch.html  fn.dispatch_stream.html  fn.read_frame.html  fn.start_client_with_config.html  fn.start_server_with_config.html  index.html  sidebar-items.js  struct.Broadcaster.html  struct.ClientConfig.html  struct.ClientTlsConfig.html  struct.CommandRequest.html  struct.CommandResponse.html  struct.GeneralConfig.html  struct.Gzip.html  struct.Hdel.html  struct.Hexist.html  struct.Hget.html  struct.Hgetall.html  struct.Hmdel.html  struct.Hmexist.html  struct.Hmget.html  struct.Hmset.html  struct.Hset.html  struct.Kvpair.html  struct.LogConfig.html  struct.Lz4.html  struct.MemTable.html  struct.PSubscribe.html  struct.PUnsubscribe.html  struct.ProstClientStream.html  (+30 more)
src/: client-cli.rs  client.rs  config.rs  error.rs  kvc-cli.rs  lib.rs  server.rs
src/pb/: abi.rs  (+1 more)
tests/: server.rs
(+95 files in other folders)
