[package]
name = "simple_kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"    # 错误处理
bytes = "1"     # 高效处理网络 buffer 的库
dashmap = "5.4.0"
http = "0.2"
prost = "0.8"
sled = "0.34"
thiserror = "1"
tracing = "0.1" # 日志处理
tokio = {version = "1", features = ["full"] }
flate2 = "1"

[dev-dependencies]
tracing-subscriber = "0.2"
futures = "0.3" # 提供 Stream Trait
async-prost = "0.2.1"
tempfile = "3" # 处理临时目录和临时文件
tokio-util = { version = "0.6", features = ["codec"] }

[build-dependencies]
prost-build = "0.9" # 编译 protobuf
