[package]
name = "simple_kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kvs"
path = "src/server.rs"

[[bin]]
name = "kvc"
path = "src/client.rs"


[dependencies]
anyhow = "1"    # 错误处理
bytes = "1"     # 高效处理网络 buffer 的库
dashmap = "5.4.0"
http = "0.2"
prost = "0.8"
sled = "0.34"
thiserror = "1"
tracing = "0.1" # 日志处理
tokio = {version = "1", features = ["full"] }
flate2 = "1"
tracing-subscriber = "0.2"
tokio-rustls = "0.22"
rustls-native-certs = "0.5" # 加载本机信任证书
futures = "0.3" # 提供 Stream Trait
tokio-util = { version = "0.6", features = ["compat"] }
yamux = "0.9"
tokio-stream = "0.1.10"

[dev-dependencies]
async-prost = "0.2.1"
tempfile = "3" # 处理临时目录和临时文件
tokio-util = { version = "0.6", features = ["codec"] }
certify = "0.3"

[build-dependencies]
prost-build = "0.9" # 编译 protobuf
